Development Portal (2018-08-24 shi)
==============================
Fix alert colspan
Display humanitarian flag in SAVi
Update all themes


Development Portal (2018-08-21 shi)
==============================
Fix word-break in sector / donor tables for long names in columns
Update sector/donor tables width and layout
Update print-friendly css


Development Portal (2018-08-16 shi)
==============================
Dsiplay document-date for document-link in SAVi
Updated print-friendly css
Updated all themes with new displays
Sort document-link by date


Development Portal (2018-07-03 shi)
==============================
Fix activity list header in Generator
Display new policy marker search dropdown
Update translations and typeahead css


Development Portal (2018-06-25 shi - full)
==============================
Display location description narrative in SAVi
Display budget status in SAVi
Display participating-org type in SAVi
Update all themes with new displays


Development Portal (2018-06-11 shi)
==============================
Remove indicator numbers for results in SAVi


Development Portal (2018-05-25 shi)
==============================
Fix table (list and activity) word break


Development Portal (2018-05-16 shi)
==============================
Updated 'outgoing commitments' text in table headers and footer
Updated translation
Add policy-marker css to all themes
Update css for activity table headers
Update missing view
Update print-friendly css


Development Portal (2018-04-26 shi)
==============================
Added target and actual default text for result in SAVi
Added empty_flag for non-CRS country portals
Added policy-marker vocab, code, significance codelist
Display policy-marker in SAVi
Updated footer text about IATI


Development Portal (2018-04-06 shi)
==============================
Update landing page design
Update hover state for buttons
Clean up view_search
Update table hover states
Minor css fixes
Update all themes css


Development Portal (2018-04-03 shi)