@@ -3,6 +3,8 @@ Development Portal (2018-08-24 shi)
 Fix alert colspan
 Display humanitarian flag in SAVi
 Update all themes
+Don't display empty comments/location/dimension in results for SAVi
+Update print-friendly css
 
 
 Development Portal (2018-08-21 shi)
